[package]
name = "leptos-nested-outlet"
version = "0.1.0"
edition = "2021"
authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.7", features = ["csr", "nightly"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", branch =  "leptos_0.7", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
futures = "0.3.30"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
